--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             style="display: flex;flex-direction: column;align-items: center;justify-content: space-between;">
                             <img src="https://upload.wikimedia.org/wikipedia/en/e/e1/International_Institute_of_Information_Technology%2C_Hyderabad_logo.png"
                                 alt="iiith-logo" style="max-width: 60%;height: auto;">
-                            <p><a href="About-IIITH.pdf" style="font-size: 2vw;" target="_blank">Click here to know
+                            <p><a href="About-IIITH.pdf" style="font-size: 2vw;" target="_blank" class="IIIT-link">Click here to know
                                     about IIIT-H</a></p>
                         </div>
                     </div>
